# flight-price-data-project

./: .gitignore  Dockerfile  README.md  app.py  db.py  docker-compose.yml  entrypoint.sh  flight_price_database.db  flight_prices_Flights%20to%20Agadir%20from%20Vienna%20on%202026-01-12%20oneway%20non-stop.csv  main.py  pyproject.toml  searches.json  web_scraper.py
