[project]
name = "flight-price-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.3.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "schedule>=1.2.2",
    "selenium>=4.39.0",
    "sqlalchemy>=2.0.45",
    "webdriver-manager>=4.0.2",
]
